Fixed image alignment to center for larger screens.

--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,7 @@ button {
 .row {
 	margin-bottom: 3px;
 }
+
+.img-responsive {
+	margin: 0 auto;
+}
